tests/paczka1/fuzzy1/10780406.err
Error in line 8: 0euYPZ84i A250 28,0
Error in line 10: A250 A906 76,2
Error in line 25: 0euYPZ84i A569 95,1
Error in line 26: 0euYPZ84i A906 2,7
Error in line 33: A250 S602 92,4
